[package]
name = "pdf"                                   # the name of the package
version = "0.1.0"                              # the current version, obeying semver
authors = ["Aadish <aadish@ohs.stanford.edu>"]
edition = "2021"

[[bin]]
name = "pdf"
path = "src/main.rs"

[dependencies]
regex = "1.11.1"
flate2 = "1.0"
